UI bug triage (#1143)
* update cover image generation logic to show uncropped images

* update cover image generation logic to show uncropped images (collections)

* adjust foreground-background contrast for full description modal

* add an unescape filter to render html entities for collection descriptions

* add spacing between paragraphs in collection full description modal

* add a button/modal for collection metadata

* fix a missing include

* improve contrast for flatpage links

--- a/apps/static/css/components/collection.scss
+++ b/apps/static/css/components/collection.scss
@@ -61,6 +61,25 @@
     transition: background-color 0.3s ease;
 }
 
+.metadata-button {
+    margin-top: 20px;
+    background-color: $rx-color-cement-gray;
+    border: none;
+    color: $color-white;
+    font-weight: bold;
+    height: 40px;
+    border-radius: 5px;
+    font-size: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
+}
+
+.description-button + .metadata-button {
+    margin-left: 0.75rem;
+}
+
 .modal-bg {
     background-size: cover;
     background-position: center;
@@ -71,8 +90,8 @@
 }
 
 .modal-overlay {
-    background: rgba($color-black, 0.6);
-    /* Dark overlay */
+    background: rgba($color-black, 0.85);
+    /* Dark overlay adjusted for higher contrast */
     height: 100%;
     width: 100%;
     position: absolute;
@@ -89,6 +108,10 @@
 .modal-overlay p {
     position: relative;
     z-index: 1;
+}
+
+.modal-overlay p {
+    margin-bottom: 1rem;
 }
 
 .rx-collection-modal {
